# xp-sqlx

./: .gitignore  Cargo.toml  README.md  ext_dependencies.csv  justfile  rust-toolchain.toml  rustfmt.toml  template.env  typos.toml
.sqlx/: query-54522a1763137b79445c73606319b1d8e7454424aed80d179101e2765b0e822a.json  query-ed336e54093299e85a86d0d2d9b073245521bf9c15db5917e46aadec865de890.json  query-f5a8606a1f3a53c9f5e7fe97badfde65da3287501d654d4f2b9553c017cc7f86.json  query-fcfc2afe893139ec94d20945ce95090a6143a15db54d20fb6a24a076ed3be910.json  query-ff0b7eed1d03cf000c657a030d76cfcb6afd75be56c6cc99dd1d1aaca9c383f0.json
.support/: _template.env
benches/: transpose_bench.rs
crates/xp-sqlx/: Cargo.toml
data/db_gen/: Dockerfile  database_students.sql  docker-compose.yaml
data/sql_queries/: features_distinct.sql  students_10.sql  students_w_id.sql
proc_macro/: Cargo.toml
proc_macro/src/: lib.rs
src/: lib.rs  main.rs  stream_to_df.rs
xp-sqlx/: Cargo.toml
xp-sqlx/src/: main.rs  stream_to_df.rs
xtask/: Cargo.toml
xtask/src/: main.rs  types-manual.rs
