# Settings for Rust Workspace
# [Cargo Manifest Configuration Reference](https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section)

[workspace]
members = ["crates/*", "xtask"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ethan Skowronski-Lutz"]
description = "exploring use of sqlx"
keywords = ["database", "sql", "sqlx", "workspace", "explorative"]
# publish = []
# license = ""
# license-file = ""

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.clippy]
allow_attributes = "warn"

[profile.release]
codegen-units = 1
lto = true        # true:= "fat"
[profile.profiling] # for perf-analysis, e.g. `samply`
inherits = "release"
debug = true



[workspace.dependencies]
## --Async--
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }
### - Remote -
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "chrono",
] }

## --Diagnostics--
tracing = { version = "0.1.41", features = [] }
#                  "release_max_level_warn"^"release_max_level_off"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-flame = "0.2.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-timing = "0.6.0"



## -- Local --
proc_macro = { path = "../proc_macro" }

## -- Other --
chrono = "0.4"

## --Env & Files--
arboard = "3.4.1"
csv = "1.3.1"
dotenvy = "0.15.7"
include_dir = "0.7.4"
secrecy = "0.10.3"
toml = "0.8.19"
walkdir = "2.5.0"
### Config
config = "0.15.4"
directories = "5.0.1"
### System & Processes
rexpect = { version = "0.6.0", features = ["which"] }

## --Ergonomics--
bon = "3.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
indoc = "2.0.5"
itertools = "0.14.0"
nestify = "0.3.3"
strum = { version = "0.26.3", features = ["derive", "phf"] }

## -- DATA --
polars = { version = "0.42", features = [
    "lazy",
    "serde",
    "parquet",
    "polars-io",
    "temporal",
] }

## --Interface--
### - CLI -
clap = { version = "4.5.22", features = [
  "env",
  "cargo",
  "derive",
  "string",
  "unicode",
  "wrap_help",
] }
clap-verbosity-flag = "3.0.1"
dialoguer = "0.11.0"
indicatif = "0.17.9"
owo-colors = "4.1.0"
tabled = "0.17.0"
json_to_table = "0.9"

# Dev-Dependencies
##__Benchmarking__
divan = "0.1.17"
## __Test_Ergonomics__
pretty_assertions = "1.4.1"
test-log = { version = "0.2.16", features = ["trace"] }
## __Property Sample Testing__
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
## __Snapshot Testing__
insta = { version = "1.41.1", ff = [
  "clap",
  "csv",
  "json",
  "redactions",
  "serde",
  "toml",
  "walkdir",
] }
