[package]
name = "xp-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.4", features = [
    "env",
    "derive",
    "string",
    "wrap_help",
] }
derive_more = { version = "1.0", features = ["full"] }
dialoguer = "0.11.0"
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"
egui_inbox = "0.5"
futures = "0.3"
include_dir = "0.7.3"
polars.workspace = true
sqlx = { version = "0.8", features = [
    "mysql",
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "chrono",
] }
tokio = { version = "1.37", features = ["full", "tracing"] }
proc_macro = { path = "../proc_macro" }
