[package]
name = "xp-sqlx"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dialoguer = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
polars = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
proc_macro = { path = "../proc_macro" }
